# oo-design

./: .gitignore  CMakeLists.txt  Doxyfile  main.cpp
include/: ForUnitTesting.hpp  HelloWorldPrinter.hpp
include/roulette/: Outcome.hpp
src/: CMakeLists.txt  ForUnitTesting.cpp  HelloWorldPrinter.cpp
src/roulette/: CMakeLists.txt  Outcome.cpp
tests/: CMakeLists.txt  ForUnitTesting_test.cpp  Outcome_test.cpp
